added input bar

--- a/main.html
+++ b/main.html
@@ -3,13 +3,14 @@
         <title>DoorDash Food Delivery & Takeout - From Restaurants Near You</title>
         <link rel="icon"  href="/images/logo.png"  type="image/x-icon">
         <link rel="stylesheet" href="main.css">
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <div class="header">
             <div class="header-top">
                 <div class="header-mid">
-                <img src="images/logo-white.png" class="header-img">
-                <h1>DOORDASH</h1></div>
+                <img src="images/Logo-Text.png" class="header-img">
+            </div>
             <div class="header-right">
                 <button class="header-right-button1">Sign In</button>
                 <button class="header-right-button2">Sign Up</button>
@@ -17,9 +18,70 @@
             </div>
             <div class="header-center">
                 <h1>Discover restaurants and more near you.</h1>
+                <div class="location-input">
+                    <img src="images/location.svg" class="location-img1">
+                    <input type="text" placeholder="Enter delivery address">
+                    <button><img src="images/arrow-right.png" class="location-img2"></button>
+                </div>
+                <div class="center-signin">
+                    <button><img src="images/signinuser.png" class="signinuser">
+                        <div>Sign in for saved address</div>
+                    </button>
+                </div>
             </div>
         </div>
-        <div class="middle">wsdfa</div>
+        <div class="middle">
+            <div class="middle1">
+                <div class="middle1-row1">
+                    <img src="images/ScootScoot.svg" class="img-row1">
+                    <h1>Become a Dasher</h1>
+                    <h2>ddisdfdnfsdfnsjngskgjksskgjkgsgkgksgkskgjksjkskgkk</h2>
+                </div>
+                <div class="middle1-row2">
+                    <div class="middle1-row2">
+                        <img src="images/Storefront.svg" class="img-row2">
+                        <h1>Become a Partner</h1>
+                    </div>   
+                </div>
+                <div class="middle1-row3">
+                    <div class="middle1-row3">
+                        <img src="images/iphone.svg" class="img-row3">
+                    </div><h1>Get the best DoorDash experience</h1></div>
+            </div>
+            <div class="middle2">
+                <div>Everything you crave, delivered.</div>
+            </div>
+            <div class="middle3">
+                <div>DashPass is delivery for less</div>
+            </div>
+            <div class="middle4">
+                <div>Get grocery and convenience store essentials</div>
+            </div>
+            <div class="middle5">
+                <div>Convenience stores at your doorstep</div>
+            </div>
+            <div class="middle6">
+                <div>Helping you with to-dos and gifting</div>
+                <div>
+                    <div>Return packages from home</div>
+                    <div>Flowers for any occasion</div>
+                    <div>Restock the minibar</div>
+                    <div>What your pets need, and want</div>
+                </div>
+            </div>
+            <div class="middle7">
+                <div>Unlocking opportunity for Dashers and businesses</div>
+                <div>
+                    <div>Sign up to dash and get paid</div>
+                </div>
+            </div>
+            <div class="middle8">
+                <div>Grow your business with DoorDash</div>
+            </div>
+            <div class="middle9">
+                <div>Get more from your neighborhood</div>
+            </div>
+        </div>
         <div class="footer">sfa</div>
     </body>
 </html>
