--- a/main.html
+++ b/main.html
@@ -31,22 +31,45 @@
             </div>
         </div>
         <div class="middle">
-            <div class="middle1">
-                <div class="middle1-row1">
-                    <img src="images/ScootScoot.svg" class="img-row1">
-                    <h1>Become a Dasher</h1>
-                    <h2>ddisdfdnfsdfnsjngskgjksskgjkgsgkgksgkskgjksjkskgkk</h2>
-                </div>
-                <div class="middle1-row2">
-                    <div class="middle1-row2">
-                        <img src="images/Storefront.svg" class="img-row2">
-                        <h1>Become a Partner</h1>
+            <div class="middle-centre">
+                <div class="middle1">
+                    <div class="middle1-col1">
+                    <img src="images/ScootScoot.svg" class="img-col1">
+                    <div class="middle1-text">
+                        <h1>Become a Dasher</h1>
+                        <p>
+                            As a delivery driver, you'll make reliable money—working anytime, anywhere.
+                        </p>
+                        <div class="continuebtn"><button>Start earning
+                            <img src="images/arrow-right-orange.svg">
+                        </button></div>
+                    </div>
+                    </div>
+                    <div class="middle1-col2">
+                        <img src="images/Storefront.svg" class="img-col2">
+                        <div class="middle1-text">
+                            <h1>Become a Partner</h1>
+                            <p>
+                                 Grow your business and reach new customers by partnering with us.
+                            </p>
+                            <div class="continuebtn"><button>Sign up your store
+                                <img src="images/arrow-right-orange.svg">
+                            </button></div>
+                    </div>
                     </div>   
+                    <div class="middle1-col3">
+                        <img src="images/iphone.svg" class="img-col3">
+                        <div class="middle1-text">
+                            <h1>Get the best DoorDash experience</h1>
+                            <p>
+                               Experience the best your neighborhood has to offer, all in one app.
+                            </p>
+                            <div class="continuebtn"><button>Get the app
+                                <img src="images/arrow-right-orange.svg">
+                            </button></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="middle1-row3">
-                    <div class="middle1-row3">
-                        <img src="images/iphone.svg" class="img-row3">
-                    </div><h1>Get the best DoorDash experience</h1></div>
             </div>
             <div class="middle2">
                 <div>Everything you crave, delivered.</div>
