--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
                     <div class="middle1-text">
                         <h1>Become a Dasher</h1>
                         <p>
-                            As a delivery driver, you'll make reliable money—working anytime, anywhere.
+                            As a delivery driver, make money and work on your schedule. Sign up in minutes.
                         </p>
                         <div class="continuebtn"><button>Start earning
                             <img src="images/arrow-right-orange.svg">
@@ -48,11 +48,11 @@
                     <div class="middle1-col2">
                         <img src="images/Storefront.svg" class="img-col2">
                         <div class="middle1-text">
-                            <h1>Become a Partner</h1>
+                            <h1>Become a Merchant</h1>
                             <p>
-                                 Grow your business and reach new customers by partnering with us.
+                                Attract new customers and grow sales, starting with 0% commissions for up to 30 days.
                             </p>
-                            <div class="continuebtn"><button>Sign up your store
+                            <div class="continuebtn"><button>Sign up for DoorDash
                                 <img src="images/arrow-right-orange.svg">
                             </button></div>
                     </div>
@@ -72,13 +72,33 @@
                 </div>
             </div>
             <div class="middle2">
-                <div>Everything you crave, delivered.</div>
+                <div class="middle2-left">
+                    <div class="m2l1">Everything you crave, delivered.</div>
+                    <div class="m2l2">Your favorite local restaurants</div>
+                    <div class="m2l3">Get a slice of pizza or the whole pie delivered, or pick up house lo mein from the Chinese takeout spot you've been meaning to try.</div>
+                    <button>Find Restaurants</button>
+                    </div>
+                    <div class="middle2-right">
+                        <img src="images/download_the_app_desktop.png" alt="">
+                </div>
             </div>
             <div class="middle3">
-                <div>DashPass is delivery for less</div>
+                <div class="middle3-left">
+                    <img src="images/dashpass_desktop.png" alt="">
+                </div>
+                <div class="middle3-right">
+                    <div class="m3r1">DashPass is delivery for less</div>
+                    <div class="m3r2">Members get a $0 delivery fee on DashPass orders, 5% back on pickup orders, and so much more. Plus, it's free for 30 days.</div>
+                    <button>Get DashPass</button>
+                </div>
             </div>
             <div class="middle4">
-                <div>Get grocery and convenience store essentials</div>
+                <div class="m4">
+                    <div class="m4c1">Get grocery and convenience store essentials</div>
+                    <div class="m4c2">Grocery delivery, exactly how you want it.</div>
+                    <div class="m4c3">Shop from home and fill your cart with fresh produce, frozen entrees, deli delights and more.</div>
+                    <button>Shop Groceries</button>
+                </div>
             </div>
             <div class="middle5">
                 <div>Convenience stores at your doorstep</div>
